codigo/excepciones/error_assert.out
  File "<stdin>", line 1
    assert
          ^
SyntaxError: invalid syntax